--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h3>For Arifah</h3>
     </div>
     <div class="card-back">
-        <p>Happy Birthday, Cikpah. Moga dimurahkan rezeki dan dipermudahkan segala urusan. Tekan button bawah ni kalau nak tengok surprise.</p>
+        <p>Selamat Hari Jadi, Asmira. Moga dipanjangkan umur dan dimurahkan rezeki dan dipermudahkan segala urusan. Tekan button bawah ni kalau nak tengok surprise. :)</p>
         <a href="cake.html" class="close-btn">Surprise</a>
       </div>      
   </div>
