--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="card">
     <div class="card-front">
       <img src="wish.jpg" alt="Placeholder Image" class="card-image">
-      <h3>For Arifah</h3>
+      <h3>For Asmira</h3>
     </div>
     <div class="card-back">
         <p>Selamat Hari Jadi, Asmira. Moga dipanjangkan umur dan dimurahkan rezeki dan dipermudahkan segala urusan. Tekan button bawah ni kalau nak tengok surprise. :)</p>
